--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  cursor: pointer;
+  font-size: 3rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
