--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,19 @@ code {
   cursor: pointer;
   font-size: 3rem;
 }
+
+.loader {
+  animation: spin 1s linear infinite;
+  border-top-color: #4b5563;
+  border-left-color: #4b5563;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
